added submission request

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,7 @@
 <h1>Gramventures!</h1>
 '<a href="/oauth/connect">Connect with Instagram</a>'
+
+<!-- <form method="post" action="/submission/3/vote?cu=3">
+<button>Submit</button> -->
+  
+</form>
