--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <h1>Gramventures!</h1>
 '<a href="/oauth/connect">Connect with Instagram</a>'
 
-<!-- <form method="post" action="/submission/3/vote?cu=3">
-<button>Submit</button> -->
+<form method="post" action="/submissions?gramventure_id=1&image_id=2">
+<button>Submit</button>
   
 </form>
